--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -3,8 +3,8 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Page Title| Site Name</title>
-		<meta name="description" content="Description goes here">
+		<title>Find Chess Parks | Chess in the Park</title>
+		<meta name="description" content="Find chess parks near you to play chess in person with others. Add any parks you find that aren't on our list.">
 		<meta name="author" content="Tom Tillistrand">
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 		<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
